--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,9 +27,6 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Any news</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Any Type of news</a>
-              </li>
             </ul>
           </div>
         </div>
@@ -37,17 +34,17 @@
       <div class="card" style="width: 18rem;">
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title" id="title">Title</h5>
+          <p class="card-text" id="text"> article</p>
+          <a href="#" class="btn btn-primary"></a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title" id="title2">Title</h5>
+          <p class="card-text" id="text2">article</p>
+          <a href="#" class="btn btn-primary"></a>
         </div>
       </div>
 </body>
